# buzzlocker

./: .gitignore  README.md  build.sh  buzzsaver.c  meson.build
resources/: buzzsaver.gresource.xml
src/: animation.c  animation.h  auth.c  auth.h  display_server.c  display_server.h  events.h  main.c  render.c  render.h  wayland_backend.c  x11_backend.c  x11_support.c  x11_support.h
